--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node index.ts",
     "build": "tsc",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "migration": "npx prisma db push"
   },
   "type": "commonjs",
